<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_trail_dialog_box">
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Add Trail" />

    <ScrollView
        android:id="@+id/scrollAddTrail"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_below="@+id/dialogTitle"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">


            <TextView
                android:id="@+id/trailname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/trail_name" />

            <EditText
                android:id="@+id/TrailNametxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/trailname"
                android:hint="@string/trail_name"
                android:inputType="" />
            <TextView
                android:id="@+id/trailcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/TrailNametxt"
                android:text="Trail Code" />

            <EditText
                android:id="@+id/TrailCodetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/trailcode"
                android:hint="Trail Code"
                android:inputType="" />

            <TextView
                android:id="@+id/mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/TrailCodetxt"
                android:text="@string/module"

                />

            <EditText
                android:id="@+id/Moduletxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/mod"
                android:hint="@string/module"
                android:inputType="" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/Moduletxt"
                android:text="@string/date"

                />
            <EditText
                android:id="@+id/datetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/date"
                android:hint="@string/date"
                android:focusable="false"
                android:clickable="true"
                android:inputType="" />



        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/CreateBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/save" />



</RelativeLayout>
