<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ft08.trailblazelearn.activities.TrailActivity"
    android:id="@+id/trail_activity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/trail_list"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:divider="#00000000"
        android:dividerHeight="2sp"
        android:padding="5dp">
    </ListView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/empty_value"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/add_trails_to_appear_here" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        app:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:tint="@android:color/white"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>